# three-body-problem-cipher

./: .gitignore  CLAUDE.md  CONSTANT_TIME.md  HANDOFF.md  PROGRESS-changelog.md  PROGRESS.md  README.md  REPORT.md  THREAT_MODEL.md  aead.py  auth_keyexchange.py  auth_pq_keyexchange.py  constants.py  ctr.py  demo.py  engine.py  keyexchange.py  multimap.py  pq_keyexchange.py  ratchet.py  ratchet_aead.py  requirements.txt  ruff.toml  scorecard.html  siv.py  streaming.py  twolock.py
attacks/: auth_dh_mitm.py  auth_pq_attack.py  commitment_attack.py  core_cryptanalysis.py  dh_mitm.py  differential_attack.py  known_plaintext.py  output_filter_attack.py  period_census.py  ratchet_attack.py  two_time_pad.py
bench/: _harness.py  nist_lite.py  randomness.sh  speed.py  stream_keystream.py  timing_leak.py
kat/: generate_kat.py  vectors.json
rust/: Cargo.toml
rust/src/: aead.rs  auth_pq.rs  constants.rs  ctr.rs  engine.rs  keyexchange.rs  lib.rs  main.rs  multimap.rs  ratchet.rs  ratchet_aead.rs  siv.rs  streaming.rs  twolock.rs  utils.rs
tests/: test_aead.py  test_auth_keyexchange.py  test_auth_pq.py  test_avalanche.py  test_correctness.py  test_ctr.py  test_kat.py  test_period.py  test_ratchet.py  test_rust_fuzz.py  test_rust_parity.py  test_siv.py  test_streaming.py
