[package]
name = "chaos_core"
version = "0.1.0"
edition = "2021"
description = "Rust hot-loop port of the chaos PWLCM keystream core (Phase 4). Bit-identical to the Python reference, validated against kat/vectors.json."

[[bin]]
name = "chaos_core"
path = "src/main.rs"

[lib]
name = "chaos_core"
path = "src/lib.rs"

# Stage A uses a vetted big-int crate for the 256-bit step division so we can nail correctness
# (bit-identical to the KAT) and measure the speedup first. Stage B replaces the division in the
# hot path with a hand-rolled constant-time precomputed reciprocal (§4) and drops this from the
# hot loop. Keeping it as a dependency is fine for a research core.
[dependencies]
ruint = "1"
# Vetted SHA-512 for the key-derivation (from_master + multimap KDFs). We do NOT hand-roll the hash —
# the KDF is the security ceiling, so it uses a standard reviewed implementation, mirroring Python's
# hashlib.sha512. Only the bespoke chaos math is hand-written; the primitive underneath is not.
sha2 = "0.10"
# Vetted HMAC-SHA256 for the ratchet's one-way key chain (forward secrecy). Same reasoning as sha2:
# the re-keying KDF is security-critical, so it rides a standard reviewed primitive, not hand-rolled.
hmac = "0.12"
# Wipes the retired chain key from memory on each re-key and on drop — the forward-secrecy guarantee
# Python could only promise (immutable, GC'd bytes). Closes the one gap ratchet.py flagged for the port.
zeroize = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
