[package]
name = "chaos_core"
version = "0.1.0"
edition = "2021"
description = "Rust hot-loop port of the chaos PWLCM keystream core (Phase 4). Bit-identical to the Python reference, validated against kat/vectors.json."

[[bin]]
name = "chaos_core"
path = "src/main.rs"

[lib]
name = "chaos_core"
path = "src/lib.rs"

# Stage A uses a vetted big-int crate for the 256-bit step division so we can nail correctness
# (bit-identical to the KAT) and measure the speedup first. Stage B replaces the division in the
# hot path with a hand-rolled constant-time precomputed reciprocal (§4) and drops this from the
# hot loop. Keeping it as a dependency is fine for a research core.
[dependencies]
ruint = "1"
# Vetted SHA-512 for the key-derivation (from_master + multimap KDFs). We do NOT hand-roll the hash —
# the KDF is the security ceiling, so it uses a standard reviewed implementation, mirroring Python's
# hashlib.sha512. Only the bespoke chaos math is hand-written; the primitive underneath is not.
sha2 = "0.10"
# Vetted HMAC-SHA256 for the ratchet's one-way key chain (forward secrecy). Same reasoning as sha2:
# the re-keying KDF is security-critical, so it rides a standard reviewed primitive, not hand-rolled.
hmac = "0.12"
# Wipes the retired chain key from memory on each re-key and on drop — the forward-secrecy guarantee
# Python could only promise (immutable, GC'd bytes). Closes the one gap ratchet.py flagged for the port.
zeroize = "1"
# --- Phase 8.4 two-locks: the VETTED inner vault + the vetted key-split. The whole point of two-locks
# is that the data's real guarantee rests on a peer-reviewed cipher, NEVER the hand-rolled chaos math.
# So these are standard RustCrypto implementations, mirroring Python's `cryptography` AES-GCM / ChaCha /
# HKDF byte-for-byte — only the OUTER chaos wall is bespoke.
hkdf = "0.12"             # HKDF-SHA256 key split (outer-wall key vs inner-vault key); RFC 5869, salt=None.
aes-gcm = "0.10"          # AES-256-GCM inner vault (default). 96-bit nonce, 128-bit tag — matches Python.
chacha20poly1305 = "0.10" # ChaCha20-Poly1305 inner vault (alt). Self-describing alg byte selects it.
# --- Phase 8.5 key agreement: the VETTED post-quantum half of the hybrid handshake. The classical
# half is plain finite-field Diffie-Hellman over the 2048-bit RFC 3526 prime, which reuses the existing
# `ruint` big-int (no new crate) and is byte-identical to Python's `pow`. The post-quantum half is
# ML-KEM-768 (FIPS 203) from RustCrypto — proven to produce the SAME keys as Python's OpenSSL 3.5 backend
# (same seed -> same encapsulation key; cross-decapsulation matches). Default features only (NO getrandom):
# the core stays fully deterministic, the caller owns all randomness (seed + encaps message), so the KAT
# can pin it — the same discipline as twolock's explicit nonces. `zeroize` wipes the decapsulation key.
ml-kem = { version = "0.3.2", features = ["zeroize"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
